Put and Delete requests work
