# src/routes/books.js
@@ -4,5 +4,7 @@ const bookController = require('../controllers/books');
 
 router.get('/', bookController.getAll);
 router.post('/', bookController.addBook);
+router.put('/:id', bookController.updateBook);
+router.delete('/:id', bookController.deleteBook);
 
 module.exports = router;
